cmake_minimum_required(VERSION 3.26)
project(lab_oop_2_lab)

set(CMAKE_CXX_STANDARD 23)

add_executable(lab_oop_2_lab main.cpp
        lab_1_first_class.cpp
        lab_1_first_class.h
        lab_1_second_class.cpp
        lab_1_second_class.h
        lab_1_third_class.cpp
        lab_1_third_class.h)
