cmake_minimum_required(VERSION 3.26)
project(lab_oop_2_lab)

set(CMAKE_CXX_STANDARD 23)

add_executable(lab_oop_2_lab main.cpp
        Dog.cpp
        Dog.h
        Cat.cpp
        Cat.h
        Rabbit.cpp
        Rabbit.h
        Employee.h
        Buyer.h
        Till.h
        Account.h
        Human.h
        Balance.h
        Administration.h
        User.h
        UpdateInformation.h
        AddProduct.h)
